--- a/view/frontend/web/template/checkout/idinstep.html
+++ b/view/frontend/web/template/checkout/idinstep.html
@@ -3,7 +3,10 @@
     <div id="checkout-step-idin" class="buckaroo_magento2_idin" data-role="content">
 
         <div class="buckaroo_idin_left">
-            <img width="50px" data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/idin.svg') }" />
+            <img width="50px"
+                 data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/idin.svg') }"
+                 alt="Idin Logo"
+            />
             <span data-bind="i18n: 'To continue you must verify your age using iDIN'"></span>
         </div>
         <div class="buckaroo_idin_right">
