--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -14,7 +14,10 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/afterpay.svg') }" />
+                <img
+                    data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/afterpay.svg') }"
+                    alt="Riverty Logo"
+                />
             </div>
         </div>
     </div>
@@ -31,6 +34,7 @@
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment">
+                    <legend>Payment Details</legend>
 
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_afterpay2_BillingName"> <span data-bind="i18n: 'Billing Name:'"> </span> </label>
