--- a/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
+++ b/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
@@ -22,8 +22,8 @@
 
 <?php $code = $block->escapeHtml($block->getMethodCode()); ?>
 
-<fieldset class="admin__fieldset payment-method" id="payment_form_<?= $code; ?>" style="display:none">
-
+<fieldset class="admin__fieldset payment-method" id="payment_form_<?= $code; ?>" style="display:block">
+    <legend>Billing address</legend>
     <div class="admin__field _required">
         <label class="label admin__field-label" for="buckaroo_magento2_payperemail_genderSelect">
             <span><?= $block->escapeHtml(__('Salutation:')); ?></span>
@@ -107,7 +107,7 @@
         ['email', 'buckaroo_magento2_payperemail_Email'],
         ['order-billing_address_firstname', 'buckaroo_magento2_payperemail_BillingFirstName'],
         ['order-billing_address_lastname', 'buckaroo_magento2_payperemail_BillingLastName'],
-        ['order-billing_address_middlename', 'buckaroo_magento2_payperemail_BillingFirstName'],    
+        ['order-billing_address_middlename', 'buckaroo_magento2_payperemail_BillingFirstName'],
     ].forEach(function (item) {
         if (document.getElementById(item[1]) && (document.getElementById(item[1]).value.length == 0) &&
             document.getElementById(item[0]) && (document.getElementById(item[0]).value.length > 0)
