--- a/view/frontend/web/template/cart/totals/buckaroo_fee.html
+++ b/view/frontend/web/template/cart/totals/buckaroo_fee.html
@@ -1,13 +1,13 @@
 <!-- ko if: isAvailable() -->
 <!-- ko if: displayBothPrices() -->
 <tr class="totals buckaroo_fee excl">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="text: $t(getTitle()) + ' ' + $t(excludingTaxMessage)"></span>
     </th>
     <td data-bind="text: getValue(), attr: {'data-th': $t(excludingTaxMessage)}" class="amount"></td>
 </tr>
 <tr class="totals buckaroo_fee incl">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="text: $t(getTitle()) + ' ' + $t(includingTaxMessage)"></span>
     </th>
     <td data-bind="text: getIncludingTaxValue(), attr: {'data-th': $t(includingTaxMessage)}" class="amount"></td>
@@ -15,7 +15,7 @@
 <!-- /ko -->
 <!-- ko if: displayPriceInclTax() -->
 <tr class="totals buckaroo_fee">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{i18n: getTitle()}"></span>
     </th>
     <td data-bind="{text: getIncludingTaxValue(), attr: {'data-th': $t(getTitle())}}" class="amount"></td>
@@ -23,7 +23,7 @@
 <!-- /ko -->
 <!-- ko if: displayPriceExclTax() -->
 <tr class="totals buckaroo_fee">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{i18n: getTitle()}"></span>
     </th>
     <td data-bind="{text: getValue(), attr: {'data-th': $t(getTitle())}}" class="amount"></td>
