--- a/view/frontend/web/template/cart/totals/paid_gift.html
+++ b/view/frontend/web/template/cart/totals/paid_gift.html
@@ -1,7 +1,7 @@
 <!-- ko if: typeof getAlreadyPayValue() === 'object' -->
 <!-- ko foreach: getAlreadyPayValue() -->
 <tr class="totals buckaroo_already_paid">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{text: label}"></span>
     </th>
     <td data-bind="{text: amount}" class="amount"></td>
@@ -11,7 +11,7 @@
 
 <!-- ko if: getAlreadyPayValue() && (typeof getAlreadyPayValue() !== 'object') -->
 <tr class="totals buckaroo_already_paid">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{text: getAlreadyPayTitle()}"></span>
     </th>
     <td data-bind="{text: getAlreadyPayValue(), attr: {'data-th': $t(getAlreadyPayTitle())}}" class="amount"></td>
