--- a/view/frontend/web/template/payment/buckaroo_magento2_mbway.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mbway.html
@@ -14,7 +14,10 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }" />
+                <img
+                    data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/'+getCode().replace('buckaroo_magento2_','')+'.svg') }"
+                    alt="MBWay Logo"
+                />
             </div>
         </div>
     </div>
