--- a/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
@@ -14,7 +14,10 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/sepa-credittransfer.svg') }" />
+                <img
+                    data-bind="attr: { src: require.toUrl('Buckaroo_Magento2/images/svg/sepa-credittransfer.svg') }"
+                    alt="SEPA Transfer Logo"
+                />
             </div>
         </div>
     </div>
