--- a/view/frontend/web/template/summary/buckaroo_fee.html
+++ b/view/frontend/web/template/summary/buckaroo_fee.html
@@ -1,13 +1,13 @@
 <!-- ko if: isAvailable() -->
 <!-- ko if: displayBothPrices() -->
 <tr class="totals buckaroo_fee excl">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="text: $t(getTitle()) + ' ' + $t(excludingTaxMessage)"></span>
     </th>
     <td data-bind="text: getValue(), attr: {'data-th': $t(excludingTaxMessage)}" class="amount"></td>
 </tr>
 <tr class="totals buckaroo_fee incl">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="text: $t(getTitle()) + ' ' + $t(includingTaxMessage)"></span>
     </th>
     <td data-bind="text: getIncludingTaxValue(), attr: {'data-th': $t(includingTaxMessage)}" class="amount"></td>
@@ -15,7 +15,7 @@
 <!-- /ko -->
 <!-- ko if: displayPriceInclTax() -->
 <tr class="totals buckaroo_fee">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{i18n: getTitle()}"></span>
     </th>
     <td data-bind="{text: getIncludingTaxValue(), attr: {'data-th': $t(getTitle())}}" class="amount"></td>
@@ -23,7 +23,7 @@
 <!-- /ko -->
 <!-- ko if: displayPriceExclTax() -->
 <tr class="totals buckaroo_fee">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{text: getTitle()}"></span>
     </th>
     <td data-bind="{text: getValue(), attr: {'data-th': $t(getTitle())}}" class="amount"></td>
@@ -34,7 +34,7 @@
 <!-- ko if: typeof getAlreadyPayValue() === 'object' -->
 <!-- ko foreach: getAlreadyPayValue() -->
 <tr class="totals buckaroo_already_paid">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{text: label}"></span>
     </th>
     <td class="amount" data-bind="{text: amount}">
@@ -47,7 +47,7 @@
 
 <!-- ko if: getAlreadyPayValue() && (typeof getAlreadyPayValue() !== 'object') -->
 <tr class="totals buckaroo_already_paid">
-    <th class="mark">
+    <th class="mark" scope="col">
         <span data-bind="{text: getAlreadyPayTitle()}"></span>
     </th>
     <td data-bind="{text: getAlreadyPayValue(), attr: {'data-th': $t(getAlreadyPayTitle())}}" class="amount"></td>
