SonarQube Fixing Bugs - hide legend

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -592,6 +592,11 @@
     align-items: center;
     cursor: pointer;
 }
+
+.hidden-fieldset-legend {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     .buckaroo_magento2_paybybank .billing-address-form
     {
