--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -107,7 +107,7 @@
                   mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment styled">
-                    <legend>Payment Details</legend>
+                    <legend class="hidden-fieldset-legend">Payment Details</legend>
                     <div class="fieldset card_front width-100">
 
                         <div class="field required width-100" >
