--- a/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
@@ -37,7 +37,7 @@
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment">
-                    <legend>Payment Details</legend>
+                    <legend class="hidden-fieldset-legend">Payment Details</legend>
                     <div class="field required">
                         <label for="bankaccountholder" class="label">
                             <span data-bind="i18n: 'Bank account holder'"> </span>
