--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -34,7 +34,7 @@
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment">
-                    <legend>Payment Details</legend>
+                    <legend class="hidden-fieldset-legend">Payment Details</legend>
 
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_afterpay2_BillingName"> <span data-bind="i18n: 'Billing Name:'"> </span> </label>
