--- a/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarna.html
@@ -36,7 +36,7 @@
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset">
-                    <legend>Payment Details</legend>
+                    <legend class="hidden-fieldset-legend">Payment Details</legend>
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_klarna_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
                         <div class="control addon">
