--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -42,7 +42,7 @@
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}" id="buckaroo_magento2_mrcash_clientSideModeCc_block">
                 <fieldset class="fieldset bk-mrcash">
-                    <legend>Payment Details</legend>
+                    <legend class="hidden-fieldset-legend">Payment Details</legend>
                         <div class="field required">
                             <label class="label" for="buckaroo_magento2_mrcash_cardholdername"> <span data-bind="i18n: 'Name on card:'"> </span> </label>
                             <div class="control">
