SonarQube fix PHP MD, PHP CS

--- a/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
@@ -33,6 +33,7 @@
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment">
+                    <legend class="hidden-fieldset-legend">Payment Details</legend>
                     <div class="field required b2b-fields">
                         <label class="label" for="buckaroo_magento2_voucher_code"> <span
                                 data-bind="i18n: 'Voucher code:'"> </span> </label>
