--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -146,7 +146,7 @@
                                    ">
                                 </a>
                                 <!-- ko if: showFrenchTos -->
-                                <span data-bind="html: getFrenchTos()"></span>
+                                <span>(Or click here for the French translation: <a target="_blank" href="https://documents.riverty.com/terms_conditions/payment_methods/overview/be_fr/">terms and condition</a>.)</span>
                                 <!-- /ko -->
                             </span>
                             <div for="buckaroo_magento2_afterpay20_TermsCondition" generated="true" class="mage-error" id="buckaroo_magento2_afterpay20_TermsCondition-error" style="display: none;"><span data-bind="i18n: 'This is a required field.' "></span></div>
