--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -196,6 +196,9 @@
                                        attr: { 'href': termsUrl }
                                    ">
                                 </a>
+                                <!-- ko if: showFrenchTos -->
+                                <span data-bind="html: getFrenchTos()"></span>
+                                <!-- /ko -->
                             </span>
                         </div>
                     </div>
