--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
@@ -99,7 +99,70 @@
     </div>
 </div>
 
+<!-- /ko -->
+
 <!-- ko ifnot: isCredicardGroupMode() -->
-<div class="buckaroo_magento2_all_creditcards">HELLLOOO</div>
+<div class="buckaroo_magento2_all_creditcards" data-bind="foreach: { data: creditcards, as: 'creditcard', noChildContext: false }">
+    <div data-bind="attr: { 'class': 'buckaroo_magento2_all_creditcards payment-method buckaroo_magento2_' + code }, css: {'_active': ($parent.getCode() == $parent.isChecked() && $parent.getCreditcardType() == code)}">
+
+        <div class="payment-method-title field choice bk-payment">
+            <div class="bk-payment-wrap">
+                <div class="bk-radio-wrap">
+                    <input type="radio"
+                           name="payment[method]"
+                           class="radio"
+                           data-bind="attr: {'id': code, 'data-method': 'buckaroo_magento2_creditcard'}, value: code,  click: $parent.selectCreditCardPaymentMethod.bind($parent, code), checked: $parent.isCheckedCreditCardPaymentMethod.bind($parent, code), visible: $parent.isRadioButtonVisible()"/>
+                    <label class="label" data-bind="attr: {'for': code}">
+                        <!-- ko text: name --><!-- /ko -->
+                    </label>
+                </div>
+                <div class="bk-img-wrap">
+                    <img data-bind="attr: { src: img }"/>
+                </div>
+            </div>
+        </div>
+
+        <div class="payment-method-content">
+            <!-- ko foreach: $parent.getRegion('messages') -->
+            <!-- ko template: getTemplate() --><!-- /ko -->
+            <!--/ko-->
+
+            <div class="payment-method-billing-address">
+                <!-- ko foreach: $parent.getRegion($parent.getBillingAddressFormName()) -->
+                <!-- ko template: getTemplate()--><!-- /ko -->
+                <!--/ko-->
+            </div>
+
+            <div class="checkout-agreements-block">
+                <!-- ko foreach: $parent.getRegion('before-place-order') -->
+                <!-- ko template: getTemplate() --><!-- /ko -->
+                <!--/ko-->
+            </div>
+
+            <div class="actions-toolbar">
+                <div class="primary">
+                    <button id="button-action-checkout-giftcards"
+                            class="action primary checkout"
+                            type="submit"
+                            data-bind="
+                            click: $parent.placeOrder.bind($parent),
+                            attr: {title: $t('Place Order')},
+                            enable: ($parent.getCode() == $parent.isChecked()),
+                            css: {disabled: !$parent.buttoncheck()}
+                            "
+                            disabled>
+                        <span data-bind="i18n: 'Place Order'"></span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- ko if: $parent.payWithBaseCurrency() -->
+            <div class="buckaroo_magento2_currency-notification">
+                <span data-bind="text: $parent.getPayWithBaseCurrencyText()"></span>
+            </div>
+            <!--/ko-->
+        </div>
+    </div>
+</div>
 
 <!-- /ko -->
