BP-3316 - add billing address to checkout for creditcards

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -219,7 +219,8 @@
     .buckaroo_magento2_voucher .payment-method-billing-address,
     .buckaroo_magento2_paybybank .payment-method-billing-address,
     .buckaroo_magento2_mbway .payment-method-billing-address,
-    .buckaroo_magento2_multibanco .payment-method-billing-address
+    .buckaroo_magento2_multibanco .payment-method-billing-address,
+    .buckaroo_magento2_all_creditcards .payment-method-billing-address
     {
         float:left;
         width: 50%;
