--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -220,7 +220,7 @@
     .buckaroo_magento2_paybybank .payment-method-billing-address,
     .buckaroo_magento2_mbway .payment-method-billing-address,
     .buckaroo_magento2_multibanco .payment-method-billing-address,
-    .buckaroo_magento2_all_creditcards .payment-method-billing-address
+    .buckaroo_magento2_all_creditcard .payment-method-billing-address
     {
         float:left;
         width: 50%;
@@ -563,7 +563,7 @@
     margin-bottom: 10px;
 }
 
-.buckaroo_magento2_all_giftcards{
+.buckaroo_magento2_all_giftcards, .buckaroo_magento2_all_creditcards{
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
 }
